<resources>
    <string name="app_name">Leko APP-1</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="required_field">Required Field!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ConfirmDelete">Confirm Delete</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="cep">Cep</string>
    <string name="find">Find</string>
    <string name="street">Street</string>
    <string name="streetType">Type Street</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="loading">Loading</string>
    <string name="success">Sucess</string>
    <string name="loginFail">Login Fail</string>
    <string name="InvalidAge">Invalid Age</string>
</resources>
